# EEG_preprocessing_UMCU

./: .ruff.toml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.dev.md  README.md  next_steps.md  project_setup.md  pyproject.toml  sonar-project.properties
.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  03_readthedocs.md  04_zenodo_integration.md  05_linting.md
.github/workflows/: build.yml
docs/: Makefile  conf.py  index.rst  make.bat
src/eeg_preprocessing_umcu/: DesikanVox.xlsx  DesikanVoxLabels.csv  Python_script_process_EEGs.py  Val3_Python_script_process_EEGs.py  __init__.py  eeg_processing script v3_25_filterexcel.py  eeg_processing_config_02.py  eeg_processing_config_03.py  eeg_processing_script.py  eeg_processing_script_v3_30.py  eeg_processing_settings.py  my_module.py
tests/: test_my_module.py
